user-apps/miscellaneous/excalidraw/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw
  labels:
    app: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw
      netpol.cilium.io/egress-deny: "true"
      netpol.cilium.io/ingress-from-ingress: "true"
  template:
    metadata:
      labels:
        app: excalidraw
        netpol.cilium.io/egress-deny: "true"
        netpol.cilium.io/ingress-from-ingress: "true"
    spec:
      containers:
        - name: excalidraw
          image: excalidraw/excalidraw:latest@sha256:b6cd04431d88f2756a7c3095cf7970884e8fd6b2800c9445b5a60a5c715bbf0c
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
